[project]
name = "salt-acme"
version = "1.4.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["salt", "acme", "cryptography", "dnspython~=2.0"]

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "matchlib",
    "pytest",
    "ruff",
    "tox",
    "tox-uv>=1.25.0",
    "uv<0.7.4",
]
