[project]
name = "salt-acme"
version = "1.4.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["salt", "acme", "cryptography", "dnspython~=2.0"]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "nox" },
  { include-group = "test" },
]
lint = ["ruff==0.12.12"]
nox = ["nox>=2025.5.1"]
test = ["matchlib", "pytest==8.4.2"]

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
# Salt's legacy setup.py requires old setuptools. Since uv 0.6.0, it
# does not fall back to reading requirements from egg-info.
build-constraint-dependencies = ["setuptools==75.5.0"]
